--- a/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.css
+++ b/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.css
@@ -1,5 +1,8 @@
 /** Add css rules here for your application. */
 
+#buttonGuest {
+  color: red;
+}
 
 /** Example rules used by the template application (remove for your app) */
 h1 {
@@ -31,4 +34,5 @@ h1 {
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
+  color: red;
 }
